--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 body {
   font-family: "Source Sans Pro", sans-serif;
   color: #fff;
-  background-color: #222;
+  background-color: black;
   text-align: center;
 }
 
